<resources>
    <string name="app_name">AnimeWatchList</string>
    <string name="name">Name</string>>
    <string name="add_new_watch_list">Add new Watch List</string>
    <string name="detail_of_watch_list">Detail of Watch List</string>
    <string name="list_anime_still_in_empty">List Anime still in empty</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="a">A</string>
    <string name="genre">Genre</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_anime_list">Edit Anime list</string>
</resources>
