<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".Main.MainActivity">

  <android.support.v7.widget.Toolbar
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/toolbar"
          android:background="@color/colorPrimary"
          android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

  <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

     <android.support.design.widget.TextInputLayout
             android:id="@+id/forTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

         <EditText
                 android:id="@+id/textTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title"
                 android:inputType="textNoSuggestions"
                 style="@style/Widget.AppCompat.EditText"/>

     </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
              android:id="@+id/forYear"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

          <EditText
                  android:layout_width="match_parent"
                  android:id="@+id/textYear"
                  android:layout_height="wrap_content"
                  android:hint="@string/year"
                  android:inputType="textNoSuggestions"
                  style="@style/Widget.AppCompat.EditText"/>

      </android.support.design.widget.TextInputLayout>

        <Spinner
                android:id="@+id/spinnerGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"/>

        <Button
                android:id="@+id/btnInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"
                android:text="@string/add_new_watch_list"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/colorPrimary"/>

        <Button
                android:id="@+id/btnDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_of_watch_list"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/colorPrimary"
                />


    </LinearLayout>

  </ScrollView>


</LinearLayout>