<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/rowList"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/row_bg_circle"
                        android:gravity="center"
                        android:text="@string/a"
                        android:textColor="#fff"
                        android:textSize="17sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/rowTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/rowYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/year"
                            android:textSize="15sp"
                            android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

</LinearLayout>